add validation to create and update event and add illegal argument exception handler
